# MTP-Phase2

./: .gitignore  Background_remove.py  mydata.txt
3D_reconstruction/: README.MD  binvox_visualization.py  config.py  test.py
ArduinoFiles/NewVerson1/: NewVerson1.ino  functions.h
ArduinoFiles/Version1_1/: HighLevelcode.cpp  UserManualV1.2.txt  Version1_1.ino  functions.h
ArduinoFiles/Version1_1/HighLevelCPP/: HighLevelcode.cpp  new.cpp
ArduinoFiles/Version1_1/HighLevelPythonFile/: HighlevelPython.py  ManualControlV2.py
ArduinoFiles/Version1_2/: Version1_2.ino  functions.h
ArduinoFiles/v0_1/: functions.h  v0_1.ino
Base_moving/: Manual_F_B.py  Manual_Speed.py  Manual_new.py  Plot.py  Plot_dubug.py  checkBixchM2.py
Calibration/HighLevel/: PlannedPath.py  ReadEncoder.py
Calibration/Try1/: Clean.sh  Intermediate.py  PythonFile.py  Save2Disk  runBash.sh
Calibration/Try1/CalibrationFiles/: OdemData.txt
Calibration/Try2/: Intermediate.py  PythonFile.py  roboclaw_3.py  setup.sh
Calibration/Try2/CalibrationFiles/: OdemData.txt
Calibration/Try3/: PythonFile_all.py  Python_test_auto.py
Calibration/Try3/CalibrationFiles/: OdemData.txt
Calibration/Try3/CalibrationFiles/Color/: Color-16  Color-22  Color-24  Color-25  Color-30  Color-31  Color-4  Color-40  Color-45  Color-47
Calibration/Try3/CalibrationFiles/Depth/: Depth-0  Depth-1  Depth-13  Depth-15  Depth-18  Depth-2  Depth-24  Depth-25  Depth-26  Depth-28  Depth-29  Depth-3  Depth-4  Depth-43  Depth-45  Depth-46  Depth-48  Depth-6  Depth-8
Calibration/Try3/CalibrationFiles/dataset1/Color/: Color-13  Color-19  Color-2  Color-26  Color-34  Color-44
Calibration/nihar@192.168.0.110/CalibrationFiles/Color/: Color-0  Color-1  Color-15  Color-21  Color-32  Color-36  Color-43  Color-7  Color-8  Color-9
Calibration/nihar@192.168.0.110/CalibrationFiles/Depth/: Depth-16  Depth-19  Depth-20  Depth-21  Depth-22  Depth-30  Depth-32  Depth-33  Depth-34  Depth-35  Depth-39  Depth-42  Depth-5  Depth-50  Depth-7  Depth-9
Calibration/nihar@192.168.0.110/CalibrationFiles/dataset1/Color/: Color-18  Color-20  Color-29  Color-3  Color-35  Color-38  Color-41  Color-48  Color-6
Calibration/nihar@192.168.0.110/Try3/: PythonFile_all.py
Calibration/nihar@192.168.0.110/Try3/CalibrationFiles/Color/: Color-10  Color-14  Color-33  Color-42  Color-49  Color-5
Calibration/nihar@192.168.0.110/Try3/CalibrationFiles/Depth/: Depth-10  Depth-11  Depth-12  Depth-14  Depth-17  Depth-23  Depth-27  Depth-31  Depth-36  Depth-37  Depth-38  Depth-40  Depth-41  Depth-44  Depth-47  Depth-49
Calibration/nihar@192.168.0.110/Try3/CalibrationFiles/dataset1/Color/: Color-11  Color-12  Color-17  Color-23  Color-27  Color-28  Color-37  Color-39  Color-46  Color-50
Realsense_tests/First/: CMakeLists.txt  Makefile  hello
Realsense_tests/FrameRead/: CMakeLists.txt
Realsense_tests/Save2Disk/: CMakeLists.txt  Readme.txt  Save2Disk  Savetodisk.cpp  Savetodisk__1.cpp  Savetodisk_bkp.cpp  rs-save-to-disk-output-Color-metadata.csv  rs-save-to-disk-output-Depth-metadata.csv
Realsense_tests/SvaeDisk/: Save2Disk  Savetodisk.cpp
Wheel_Odem/: Saved_data.csv  csvPlot.py
